<resources>
    <string name="app_name">D_App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login.....</string>
    <string name="dn1">Deepesh</string>
    <string name="idpwd">Show id and pwd</string>
    <string name="id">User_id</string>
    <string name="p">Password</string>
    <string name="title_activity_welcom">Welcom</string>
    <string name="Title">Hello....\n Have a nice Day</string>
    <string name="Time">Display The Clock</string>
    <string name="Browser">Web Browser</string>
    <string name="rate">Rate This App</string>
    <string name="Click"><![CDATA[<<<<Click Here]]></string>
    <string name="cal">Calculator</string>
    <string name="title_activity_current_time">Current_time</string>
    <string name="swap">Swap clock>>>></string>
    <string name="title_activity_rating_bar1">RatingBar</string>
    <string name="rate1">Rate this App</string>
    <string name="ok">DONE</string>
    <string name="title_activity_web__browser">Web_Browser</string>
    <string name="url1">Entre url</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="EmptyString"> </string>
    <string name="sub">Sub</string>
    <string name="mul">Mul</string>
    <string name="div">Div</string>
    <string name="add">Add</string>
    <string name="title_activity_thanku">Thanku</string>
    <string name="Thanks">Thanku so much</string>
    <string name="back">Go Back>>></string>
    <string name="num">2</string>
    <string name="atmp1">Attempt:</string>
    <string name="tp">textPassword</string>
    <string name="num1">0</string>
    <string name="nm1">Number1</string>
    <string name="nm2">Number2</string>
    <string name="ht">https://</string>
</resources>
