<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.d_app.Calculator"
    android:orientation="vertical"
    android:background="#ff2a40">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        tools:context=".MainActivity"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:id="@+id/n1"
            android:background="#81ffed"
            android:textColor="#ff0505"
            android:text="@string/num1"
            android:textSize="30sp"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/nm1"
            android:selectAllOnFocus="true"
            android:layout_margin="5dp" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:id="@+id/n2"
            android:background="#81ffed"
            android:textColor="#ff0505"
            android:text="@string/num1"
            android:textSize="30sp"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/nm2"
            android:selectAllOnFocus="true"
            android:layout_margin="5dp" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/EmptyString"
        android:id="@+id/result"
        android:textColor="#0920ff"
        android:background="#ffc485"
        android:textAlignment="center"
        android:textSize="50sp"
        android:gravity="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/add"
        android:id="@+id/add1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="Add"
        android:textSize="30sp"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/sub"
        android:id="@+id/sub1"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="30sp"
        android:onClick="Add" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/mul"
        android:id="@+id/mul1"
        android:gravity="center"
        android:textSize="30sp"
        android:onClick="Add" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/div"
        android:id="@+id/div1"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="30sp"
        android:onClick="Add" />
    </LinearLayout>
</LinearLayout>
