<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.d_app.Welcom"
    android:background="@drawable/c"
    android:orientation="vertical"
    android:weightSum="1">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="456dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="0.17">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Title"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:typeface="serif"
        android:textColor="#eeffa3"
        android:gravity="top|center" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <Button
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:text="@string/Time"
        android:id="@+id/btn2"
        android:typeface="serif"
        android:textSize="20sp"
        android:gravity="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:text="@string/Browser"
        android:id="@+id/btn3"
        android:typeface="serif"
        android:textSize="20sp"
        android:gravity="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:text="@string/cal"
        android:id="@+id/btn4"
        android:textSize="20sp"
        android:typeface="serif"
        android:gravity="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:text="@string/rate"
        android:id="@+id/btn6"
        android:textSize="20sp"
        android:typeface="serif"
        android:gravity="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:text="@string/Click"
        android:id="@+id/btn5"
        android:textSize="20sp"
        android:typeface="serif"
        android:gravity="center" />

</LinearLayout>
</LinearLayout>
</LinearLayout>
