<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/window">


    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dn1"
        android:id="@+id/textView"
        android:layout_marginTop="-10dp"
        android:gravity="top|center"
        android:textSize="30sp"
        android:textColor="#ff2228"
        android:typeface="serif" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/uid"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#1eff1e"
        android:gravity="center"
        android:typeface="serif"
        android:layout_marginTop="50dp"
        android:hint="@string/id"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pwd"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textSize="30sp"
        android:textColor="#1eff1e"
        android:gravity="center"
        android:hint="@string/p"
        android:selectAllOnFocus="true" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/atmp1"
        android:textSize="30sp"
        android:textColor="#fcfff0" />
    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/num"
        android:id="@+id/txt"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textSize="30sp"
        android:textColor="#fbff4c"
        android:gravity="center" />
</LinearLayout>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:typeface="serif"
        android:textSize="25sp"
        android:src="@drawable/login_buttona" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"></RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idpwd"
        android:id="@+id/btn1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:typeface="serif"
        android:gravity="center"
        android:textSize="12sp" />
</LinearLayout>
